Refactor PluginManager usage to utilise Injector
Signed-off-by: Matt Sicker <mattsicker@apache.org>